added installation script.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -76,6 +76,8 @@ services:
       GROUP_ID: ${PROJECT_DRUPAL_GROUP_ID:-'1000'}
       DRUPAL_VERSION: ${PROJECT_DRUPAL_VERSION:-'latest'}
       TIMEZONE: ${PROJECT_TIMEZONE:-'UTC'}
+      PROJECT_NAME: ${PROJECT_NAME}
+      PROJECT_TITLE: ${PROJECT_TITLE}
       SITE_URL: ${PROJECT_DRUPAL_URL}
       HASH_SALT: ${PROJECT_DRUPAL_HASH_SALT}
       UPDATE_FREE_ACCESS: ${PROJECT_DRUPAL_UPDATE_FREE_ACCESS}
